--- a/index.html
+++ b/index.html
@@ -1,15 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 
-
-{
-  "name": "",
-  "greetingText": "Happy fucking birthday!!!",
-  "wishText": "May the js.prototypes always be with you! ;)",
-  "imagePath": "img/lydia2.png"
-}
-
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -38,12 +29,12 @@
       </div>
     </div>
     <div class="five">
-      <p class="idea-1">This is what i normally do</p>
+      <p class="idea-1">This is what i normally do...</p>
       <p class="idea-2">But i thought hey, todays your day, lets tell her shes sexy in a special way.</p>
-      <p class="idea-3">I hope you have a lovely lovely day and i hope you know how much you mean to me!
+      <p class="idea-3">YOU (MY WOMAN)
         <strong>special</strong>.</p>
-      <p class="idea-4">YOU (MY WOMAN)</p>
-      <p class="idea-5">Are so so so so sexy and i like you so much!
+      <p class="idea-4">Are so so so so sexy and i like you so much!</p>
+      <p class="idea-5">I hope you have a lovely lovely day and i hope you know how much you mean to me!
         <span>:)</span>
       </p>
       <p class="idea-6">
@@ -128,7 +119,7 @@
     <div class="nine">
       <p>Hope you enjoyed!!</p>
       <p id="replay">Or click, if you want to watch it again. smh smh </p>
-      <p class="last-smile">AAAAAAAAAAAAA</p>
+      <p class="last-smile">or yunno... KISS ME</p>
     </div>
   </div>
 </body>
