--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       </p>
     </div>
     <div class="six">
-      <img src="img/lydia.png" alt="" class="lydia-dp" id="imagePath">
+      <img src="img/mara.png" alt="" class="mara-dp" id="imagePath">
       <!--  <img src="img/hat.svg" alt="" class="hat">  -->
       <div class="wish">
         <h3 class="wish-hbd">Happy Birthday!</h3>
