--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     <div class="nine">
       <p>Hope you enjoyed!!</p>
       <p id="replay">Or click, if you want to watch it again. smh smh </p>
-      <p class="last-smile">or yunno... KISS ME</p>
+      <p class="last-smile">:)</p>
     </div>
   </div>
 </body>
