--- a/index.html
+++ b/index.html
@@ -24,16 +24,16 @@
     </div>
     <div class="four">
       <div class="text-box">
-        <p class="hbd-chatbox">Damn shawty youve got a phat ass</p>
+        <p class="hbd-chatbox">Damn shawty you've got a phat ass!</p>
         <p class="fake-btn">Send</p>
       </div>
     </div>
     <div class="five">
       <p class="idea-1">This is what i normally do...</p>
       <p class="idea-2">But i thought hey, todays your day, lets tell her shes sexy in a special way.</p>
-      <p class="idea-3">YOU (MY WOMAN)
-        <strong>special</strong>.</p>
-      <p class="idea-4">Are so so so so sexy and i like you so much!</p>
+      <p class="idea-3">YOU (MY WOMAN) are...
+        <strong>SEXY</strong>.</p>
+      <p class="idea-4">and ofc lovely, kind, sweet, funny, smart!!!</p>
       <p class="idea-5">I hope you have a lovely lovely day and i hope you know how much you mean to me!
         <span>:)</span>
       </p>
@@ -47,7 +47,7 @@
       <!--  <img src="img/hat.svg" alt="" class="hat">  -->
       <div class="wish">
         <h3 class="wish-hbd">Happy Birthday!</h3>
-        <h5 id="wishText">I hope you enjoyed your presents and have kissed me all over by now! :) </h5>
+        <h5 id="wishText">I hope you enjoyed your presents! (your cue to kiss me) :) </h5>
       </div>
     </div>
     <div class="seven">
