--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <div class="container">
     <div class="one">
-      <h1 class="one">Hey
+      <h1 class="one">Heyyyyyy
         <span id="name">Mara (a.k.a ms bundz, wife, sweet)</span>
       </h1>
       <p class="two" id="greetingText">It's your motherfucking birthday!!!</p>
@@ -29,8 +29,8 @@
       </div>
     </div>
     <div class="five">
-      <p class="idea-1">This is what i normally do...</p>
-      <p class="idea-2">But i thought hey, todays your day, lets tell her shes sexy in a special way.</p>
+      <p class="idea-1">That is what i normally do...</p>
+      <p class="idea-2">But I thought hey, today is your day, lets tell her she's sexy in a special way.</p>
       <p class="idea-3">YOU (MY WOMAN) are...
         <strong>SEXY</strong>.</p>
       <p class="idea-4">and ofc lovely, kind, sweet, funny, smart!!!</p>
@@ -38,8 +38,8 @@
         <span>:)</span>
       </p>
       <p class="idea-6">
-        <span>mmmm</span>
-        <span>mmmm</span>
+        <span>mmm</span>
+        <span>mmm</span>
       </p>
     </div>
     <div class="six">
@@ -118,7 +118,7 @@
     </div>
     <div class="nine">
       <p>Hope you enjoyed!!</p>
-      <p id="replay">Or click, if you want to watch it again. smh smh </p>
+      <p id="replay">Or tap, if you want to watch it again. smh smh </p>
       <p class="last-smile">:)</p>
     </div>
   </div>
