--- a/index.html
+++ b/index.html
@@ -12,9 +12,15 @@
 </head>
 
 <body>
+ 
+ <audio id="bgMusic" autoplay loop>
+  <source src="mus\74.mp3" type="audio/mp3">
+</audio>
+ 
+
   <div class="container">
     <div class="one">
-      <h1 class="one">Heyyyyyy
+      <h1 class="one">heyyyyyy
         <span id="name">Mara (a.k.a ms bundz, wife, sweet)</span>
       </h1>
       <p class="two" id="greetingText">It's your motherfucking birthday!!!</p>
@@ -125,6 +131,22 @@
 </body>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js"></script>
+
 <script type="application/javascript" src="main.js"></script>
+<script>
+
+var bgMusic = document.getElementById("bgMusic");
+
+function toggleMusic() {
+    if (bgMusic.paused) {
+        bgMusic.play();
+    } else {
+        bgMusic.pause();
+    }
+}
+
+document.body.addEventListener("click", toggleMusic);
+
+</script>
 
 </html>
