--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 <body>
  
  <audio id="bgMusic" autoplay loop>
-  <source src="mus\74.mp3" type="audio/mp3">
+  <source src="ms-bundz-bday
+/74.mp3" type="audio/mp3">
 </audio>
  
 
