--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
  
  <audio id="bgMusic" autoplay loop>
   <source src="ms-bundz-bday
-/74.mp3" type="audio/mp3">
+img/74.mp3" type="audio/mp3">
 </audio>
  
 
