--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
 <body>
  
  <audio id="bgMusic" autoplay loop>
-  <source src="ms-bundz-bday
-img/74.mp3" type="audio/mp3">
+  <source src="img/74.mp3" type="audio/mp3">
 </audio>
  
 
