--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <!--  <img src="img/hat.svg" alt="" class="hat">  -->
       <div class="wish">
         <h3 class="wish-hbd">Happy Birthday!</h3>
-        <h5 id="wishText">I hope you enjoyed your presents! (your cue to kiss me) :) </h5>
+        <h5 id="wishText">I hope you enjoy your presents! (your cue to kiss me) :) </h5>
       </div>
     </div>
     <div class="seven">
